@@ -695,9 +695,10 @@ static int do_skill_detect_curse(object *pl, object *skill) {
 		success+= calc_skill_exp(pl,tmp, skill);
 	}
 
-    /* Check ground, too, but only objects the player could pick up */
+    /* Check ground, too, but only objects the player could pick up. Cauldrons are exceptions,
+     * you definitely want to know if they are cursed */
     for(tmp=get_map_ob(pl->map,pl->x,pl->y);tmp;tmp=tmp->above)
-	if (can_pick(pl, tmp) &&
+	if ((can_pick(pl, tmp) || QUERY_FLAG(tmp, FLAG_IS_CAULDRON)) &&
 	    !QUERY_FLAG(tmp,FLAG_IDENTIFIED) &&
 	    !QUERY_FLAG(tmp,FLAG_KNOWN_CURSED)
             && (QUERY_FLAG(tmp,FLAG_CURSED) || QUERY_FLAG(tmp,FLAG_DAMNED)) &&
